Add plan length

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1129,7 +1129,7 @@ body.transition .moment
 
       .featured-rp-box-plan
         padding: 0 10px
-        text-align: center
+        text-align: left
         float: left
 
         a
@@ -1145,8 +1145,12 @@ body.transition .moment
             font-weight: normal
             display: block
             color: #444
-            padding: 10px 0 0
-            margin-bottom: 5px
+            padding: 10px 0 0 0
+            margin-bottom: 0px
+          .length
+            font-size: .75em
+            color: #444
+            font-weight: normal
 
       .slick-slide
         opacity: .3 !important
