--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1115,7 +1115,7 @@ input[type="submit"].moment-fr-name-add
       .featured-rp-box-plan
         width: 210px
         padding: 0 10px
-        text-align: center
+        text-align: left
         float: left
 
         a
@@ -1133,7 +1133,11 @@ input[type="submit"].moment-fr-name-add
             color: #444
             padding: 10px 0 0
             margin-bottom: 5px
-
+          .length
+            font-size: .75em
+            color: #444
+            font-weight: normal
+            
       .slick-slide
         opacity: .3 !important
         transition: all 300ms ease
