better asset links

--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,8 +1,8 @@
 - @sidebar = false
 - content_for :stylesheets do
-  = stylesheet_link_tag "slick"
+  = stylesheet_link_tag "lib/slick.css"
 - content_for :javascripts do
-  = javascript_include_tag "slick"
+  = javascript_include_tag "lib/slick.min.js"
 
 #spinner
 .social-feed-wrap{"data-str-load-more" => t("moments.action.load more")}
