--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1089,7 +1089,8 @@ body.transition .moment
       overflow: hidden
       position: relative
       clear: both
-
+      margin-bottom: 0px
+      
       .slick-list
         padding: 0 !important
 
