--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1108,7 +1108,8 @@ input[type="submit"].moment-fr-name-add
       overflow: hidden
       position: relative
       clear: both
-
+      margin-bottom: 0px
+      
       .slick-list:focus
         outline: none
 
@@ -1137,7 +1138,7 @@ input[type="submit"].moment-fr-name-add
             font-size: .75em
             color: #444
             font-weight: normal
-            
+
       .slick-slide
         opacity: .3 !important
         transition: all 300ms ease
