--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1084,6 +1084,7 @@ body.transition .moment
 
     .moment-rp-text
       margin-bottom: 3px
+      min-height: 40px
 
     .featured-rp-box
       overflow: hidden
@@ -1102,7 +1103,7 @@ body.transition .moment
         position: absolute
         width: 44px
         height: 44px
-        top: 37px
+        top: 50px
         background: image-url("svg/arrow-circle-grey.svg") no-repeat center center
         text-indent: 100%
         overflow: hidden
