Adding META and LINK/Alternate Tags

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -50,6 +50,8 @@
     %meta{property: "og:locale", content: facebook_locale}
     %meta{property: "og:locale:alternate", content: "en_US"}
     %meta{property: "og:locale:alternate", content: "es_ES"}
+    %meta{property: "og:locale:alternate", content: "ko_KR"}
+    %meta{property: "og:locale:alternate", content: "zh_CN"}
     %meta{name: "twitter:card",             content: "summary"}
     %meta{name: "twitter:url",              content: meta_url}
     %meta{name: "twitter:title" ,           content: meta_title}
@@ -58,6 +60,8 @@
     %meta{name: "twitter:site",             content: "@BibleAppForKids"}
     %link{:href=> "https://www.bible.com/kids",:rel=>"alternate",:hreflang=>"en"}
     %link{:href=> "https://www.bible.com/es/kids",:rel=>"alternate",:hreflang=>"es"}
+    %link{:href=> "https://www.bible.com/ko/kids",:rel=>"alternate",:hreflang=>"ko"}
+    %link{:href=> "https://www.bible.com/zh-CN/kids",:rel=>"alternate",:hreflang=>"zh-cn"}
     %link{rel: "canonical", href: "https://www.bible.com/kids"}
 
     = stylesheet_link_tag "campaigns/kids"
