Display Hero Image and Only Load YouTube if present
Also had to create a copy of hero.jpg in PNG format. The EN version was
using JPG behind YouTube iframe. Wasn’t typically visible. I left both
the PNG and JPG versions available, but changed code to use PNG.

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -119,9 +119,10 @@
       -# !iPad hero screenshot
       -#- if not i18n_image_dir.present?
       .hero
-        = image_tag "campaigns/kids/hero.jpg", class: "hero-screen", alt: t.call('kids.story text 1')
-        .youtube-embed
-          %iframe{width:"805", height:"607", src: "#{youtube_url}", frameborder: "0", allowfullscreen: "true"}
+        = image_tag "campaigns/kids#{i18n_image_dir}/hero.png", class: "hero-screen", alt: t.call('kids.story text 1')
+        - if youtube_url.present?
+          .youtube-embed
+            %iframe{width:"805", height:"607", src: "#{youtube_url}", frameborder: "0", allowfullscreen: "true"}
         %p.hero-copy
           = t.call('kids.interact text')
 
