Adjust Page Styling and Use Image Logo for KO/ZH

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -206,6 +206,47 @@ body.body-es
   .features-5
     margin-top: -5px
 
+body.body-ko
+  .features-1,
+  .features-2,
+  .features-3,
+  .features-4,
+  .features-5
+    font-size: 18px
+    text-align: center
+
+  .features-1
+    padding-top: 25px
+  .features-2
+    padding-top: 20px
+  .features-3
+    padding-top: 10px
+  .features-4
+    padding-top: 20px
+    font-size: 16px
+  .features-5
+    margin-top: 5px
+
+body.body-zh-CN
+  .features-1,
+  .features-2,
+  .features-3,
+  .features-4,
+  .features-5
+    font-size: 18px
+    text-align: center
+
+  .features-1
+    padding-top: 25px
+  .features-2
+    padding-top: 20px
+  .features-3
+    padding-top: 20px
+  .features-4
+    padding-top: 25px
+  .features-5
+    margin-top: 5px
+
 .features-1
   position: absolute
   left: 405px
@@ -302,6 +343,16 @@ body.body-es
 body.body-es .share-em
   background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 46px -137px
 
+body.body-ko .share-em
+  background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
+  .intro-bible
+    margin-top: 10px
+
+body.body-zh-CN .share-em
+  background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
+  .intro-bible
+    margin: 10px 0 0 347px
+
 // !Logos
 
 .logos
@@ -351,6 +402,16 @@ body.body-es .share-em
   .body-es .share-em
     background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 46px -137px
     background-size: 34px 200px
+
+  .body-ko .share-em
+    background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
+    .intro-bible
+      margin-top: 10px
+
+  .body-zh-CN .share-em
+    background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
+    .intro-bible
+      margin: 10px 0 0 347px
 
 // !------- Mobile --------
 
@@ -552,6 +613,12 @@ body.body-es .share-em
     background-image: none
 
   .share-em, .body-es .share-em
+    background-image: none  !important
+
+  .share-em, .body-ko .share-em
+    background-image: none  !important
+
+  .share-em, .body-zh-CN .share-em
     background-image: none  !important
 
 
