--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -345,13 +345,13 @@ body.body-es .share-em
 
 body.body-ko .share-em
   background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
-  .intro-bible
-    margin-top: 10px
+body.body-zh-CN .intro-bible
+  margin-top: 10px
 
 body.body-zh-CN .share-em
   background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
-  .intro-bible
-    margin: 10px 0 0 347px
+body.body-zh-CN  .intro-bible
+  margin: 10px 0 0 347px
 
 // !Logos
 
@@ -405,13 +405,13 @@ body.body-zh-CN .share-em
 
   .body-ko .share-em
     background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
-    .intro-bible
-      margin-top: 10px
+  .body-zh-CN .intro-bible
+    margin-top: 10px
 
   .body-zh-CN .share-em
     background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
-    .intro-bible
-      margin: 10px 0 0 347px
+  .body-zh-CN .intro-bible
+    margin: 10px 0 0 347px
 
 // !------- Mobile --------
 
