Moving Chinese BAFK logo and shrinking help text

--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -246,6 +246,8 @@ body.body-zh-CN
     padding-top: 25px
   .features-5
     margin-top: 5px
+  .intro-help
+    font-size: 21px
 
 .features-1
   position: absolute
@@ -345,12 +347,11 @@ body.body-es .share-em
 
 body.body-ko .share-em
   background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
-body.body-zh-CN .intro-bible
-  margin-top: 10px
 
 body.body-zh-CN .share-em
   background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
-body.body-zh-CN  .intro-bible
+
+body.body-zh-CN .intro-bible
   margin: 10px 0 0 347px
 
 // !Logos
@@ -405,11 +406,10 @@ body.body-zh-CN  .intro-bible
 
   .body-ko .share-em
     background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 92px -137px
-  .body-zh-CN .intro-bible
-    margin-top: 10px
 
   .body-zh-CN .share-em
     background: #A47B5B image-url("campaigns/kids/share-sprite.png") no-repeat 85px -137px
+
   .body-zh-CN .intro-bible
     margin: 10px 0 0 347px
 
@@ -438,6 +438,9 @@ body.body-zh-CN  .intro-bible
     letter-spacing: -.05em
     margin: 5% 0 0
     text-align: center
+
+  body.body-zh-CN .intro-bible
+    margin: 5% 0 0
 
   .intro-forkids
     margin: -2% 0 0 35%
