Vod Subscription with token
-moved route to /vod_subscriptions
-changed settings widget
-passed token through /settings/vod_subscriptions
-cleaned up notifications code

--- a/app/views/layouts/settings.html.haml
+++ b/app/views/layouts/settings.html.haml
@@ -1,6 +1,7 @@
 - # sub template should define a @setting_selected variable with allowed values of:
 - # :edit, :notifications, :email, :password, :devices, :account, :vod_subscriptions
 - # found in users/_mobile_menu partial
+- current_user ||= @current_user
 
 - content_for :title do
   = t('users.settings')
