--- a/app/views/vod_subscriptions/_form.html.haml
+++ b/app/views/vod_subscriptions/_form.html.haml
@@ -8,7 +8,7 @@
 -# allowed_hours
 -# allowed_minutes
 
-= form_tag user_vod_subscriptions_path(current_user.username), class: 'vod_form' do
+= form_tag vod_subscriptions_path, class: 'vod_form' do
   %h5
     .version
       %p
