--- a/app/views/shared/_hreflang.html.haml
+++ b/app/views/shared/_hreflang.html.haml
@@ -2,10 +2,10 @@
   - locale_dir = a_locale.to_s.eql?("en") ? '' : '/' + a_locale.to_s
   - fullpath = request.fullpath
   - if defined?(presenter) and presenter.present? and presenter.respond_to?(:reference) and presenter.reference.present?
-    - fullpath = get_localized_reference_link(presenter.reference, a_locale)
+    - fullpath = "/bible#{get_localized_reference_link(presenter.reference, a_locale)}"
   - href = "#{request.protocol}#{request.host_with_port}#{locale_dir}#{fullpath}"
 
   %link{href: href, rel: "alternate", hreflang: "#{a_locale.downcase}"}
-  - if a_locale.to_s.eql?("en")
+  - if a_locale.to_s.eql?(I18n.locale.to_s)
     %link{rel: "canonical", href: href}
 
