--- a/app/views/shared/_hreflang.html.haml
+++ b/app/views/shared/_hreflang.html.haml
@@ -1,12 +1,14 @@
 - I18n.available_locales.each do |a_locale|
   - locale_dir = a_locale.to_s.eql?("en") ? '' : '/' + a_locale.to_s
   - fullpath = request.fullpath
+  - showCanonical = false
   - unless fullpath.include? "plans/"
     - if defined?(presenter) and presenter.present? and presenter.respond_to?(:reference) and presenter.reference.present?
       - fullpath = "/bible#{get_localized_reference_link(presenter.reference, a_locale)}"
+      - showCanonical = true  # only use a canonical tag for bible text version pages
   - href = "#{request.protocol}#{request.host_with_port}#{locale_dir}#{fullpath}"
 
   %link{href: href, rel: "alternate", hreflang: "#{a_locale.downcase}"}
-  - if a_locale.to_s.eql?(I18n.locale.to_s)
+  - if showCanonical and a_locale.to_s.eql?(I18n.locale.to_s)
     %link{rel: "canonical", href: href}
 
