add meta lang for google and bing, don't show hreflang for bible reader, reading plan pages

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -8,6 +8,7 @@
 = cache "head_meta_#{@site}_#{locale}", expires_in: YV::Caching.a_short_time do
   %link{rel: "shortcut icon", href:"/favicon.ico"}
   %meta{:charset => 'utf-8'}
+  %meta{'http-equiv' => 'content-language', :content => I18n.locale.downcase}
   %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
   %meta{property: "og:image", content: "#{url_for(asset_path('Bible-app-icon-english-200x200.png'))}"}
   %meta{name: 'Description', content: @meta_description || t("meta.site.description")}
