--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -24,6 +24,7 @@
     %meta{name: "twitter:app:name:googleplay",  content:"Bible"}
     %meta{name: "twitter:app:id:googleplay",    content:"com.sirma.mobile.bible.android"}
     %meta{name: "twitter:app:url:googleplay",   content: deep_link }
+    %link{rel:  "canonical", href: bible_url(reference)}
 
   %link{href: "//fonts.googleapis.com/css?family=Fjalla+One&subset=latin,cyrillic-ext,cyrillic,greek-ext,vietnamese,latin-ext", rel: "stylesheet", type: "text/css"}
 
