--- a/app/views/shared/_hreflang.html.haml
+++ b/app/views/shared/_hreflang.html.haml
@@ -1,12 +1,12 @@
-- I18n.available_locales.each do |a_locale|
-  - locale_dir = a_locale.to_s.eql?("en") ? '' : '/' + a_locale.to_s
-  - fullpath = request.fullpath
-  - unless fullpath.include? "plans/"
-    - if defined?(presenter) and presenter.present? and presenter.respond_to?(:reference) and presenter.reference.present?
-      - fullpath = "/bible#{get_localized_reference_link(presenter.reference, a_locale)}"
-  - href = "#{request.protocol}#{request.host_with_port}#{locale_dir}#{fullpath}"
+-#exclude reader and reading plan pages from hreflang tags
+- unless defined?(presenter) and presenter.present? and presenter.respond_to?(:reference) and presenter.reference.present?
+  - unless request.fullpath.include? "reading-plans/"
+    - I18n.available_locales.each do |a_locale|
+      - locale_dir = a_locale.to_s.eql?("en") ? '' : '/' + a_locale.to_s
+      - fullpath = request.fullpath
+      - href = "#{request.protocol}#{request.host_with_port}#{locale_dir}#{fullpath}"
 
-  %link{href: href, rel: "alternate", hreflang: "#{a_locale.downcase}"}
-  - if a_locale.to_s.eql?("en")
-    %link{href: href, rel: "alternate", hreflang: "x-default"}
+      %link{href: href, rel: "alternate", hreflang: "#{a_locale.downcase}"}
+      - if a_locale.to_s.eql?("en")
+        %link{href: href, rel: "alternate", hreflang: "x-default"}
 
