update reader page so that the bible ref is in h1 tag, version in h2 tag, update meta description to be the verse ref for now

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -211,9 +211,14 @@
   margin: 0
   padding-top: 5px
 
+#main header h1,
+#main header h2,
 #main header b,
 #main footer b
   font-size: 13px
+  margin-bottom: 0
+  font-weight: bold
+  margin-bottom: 0
 
 #main footer input[type="submit"],
 #main footer a.button
