--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -71,14 +71,20 @@
   position: relative
 
 .button b,
-.drop_down_select b
+.button h1,
+.button h2,
+.drop_down_select b,
+.drop_down_select h1,
+.drop_down_select h2
   display: block
   font-size: 12px !important
   padding: 0 10px
-  line-height: 21px
+  line-height: 21px !important
   height: 21px
 
-.button b
+.button b,
+.button h1,
+.button h2
   background:
     position: 10px center
     repeat: no-repeat
@@ -104,7 +110,9 @@
   top: -9px
   right: -4px
 
-.drop_down_select b
+.drop_down_select b,
+.drop_down_select h1,
+.drop_down_select h2
   border-right: 1px solid #aaa
 
 .drop_down_select span
