now a direct landing page - adding download widget to right col

--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -25,6 +25,8 @@
           %li
             = link_to v, v
 
+  = render partial: 'widgets/download_app'
+
 - content_for :title do
   = @version
 
