Save Version Id When Switching between Searches
The view was looking for params[:version] but the search controller was
supplying params[:version_id] and the references controller was
supplying params[:version]. Ideally, this parameter would be
consistently named, but having the view check for both :version and
:version_id should cover most use cases.

--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -10,9 +10,10 @@
     %form#header_search_form{action: search_path(category: params[:category] || :bible), method: "GET"}
       %input#header_search_input{type: 'search', name:"q", placeholder: t("search placeholder")}
       %input#header_search_button{type: 'submit', value: t("search")}
-      - if params[:controller] == "search"
-        -if params[:version]
-          %input{type: 'hidden', name: "version", value: params[:version]}
+      -if params[:version_id]
+        %input{type: 'hidden', name: "version_id", value: params[:version_id], extra:'first'}
+      -elsif params[:version]
+        %input{type:'hidden', name:"version_id", value:params[:version], extra:'second'}
 
     .header-user
       -# Sign in and user id
