Don't Escape plan.about HTML tags

--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -24,4 +24,4 @@
   .rp-plan-about
     .rp-plan-about-buttons
       = render partial: "/plans/button", locals: {plan: @plan}
-    %p= @plan.about
+    %p!= @plan.about
