Notifications first pass

--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -64,6 +64,7 @@
 
           %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : '', title: t("notifications.title") }
             =t("notifications.title")
+            %span.notifications-count
           = render partial: "shared/header/notifications"
 
       - else
