--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -54,9 +54,10 @@
   p
     padding: 8px 8px 8px 0
     margin-bottom: 0
-    line-height: 1.4em
+    line-height: 1.7em
     float: left
     width: 80%
+    font-size: 1.35em
 
   img
     height: 24px
@@ -112,6 +113,25 @@ article.social-requests ul
     white-space: nowrap
     overflow: hidden
     position: relative
+
+  .notifications-count
+    display: none
+    position: absolute
+    top: 0px
+    right: 4px
+    // width: 10px
+    padding: 0px 6px
+    border: 2px solid white
+    border-radius: 100px
+    background: -webkit-linear-gradient(top, #FF6969 0%,#ff0000 100%)
+    // background-color: #FF6969
+    box-shadow: 0 1px 2px rgba(0,0,0,.5), 0 1px 2px rgba(0,0,0,.4), 0 0 1px rgba(0,0,0,.7) inset, 0 8px 0px rgba(255,255,255,.11) inset
+    -webkit-background-clip: padding-box
+    font: bold 16px/20px "Helvetica Neue", sans-serif
+    color: white
+    text-decoration: none
+    text-shadow: 0 -1px 0 rgba(0,0,0,.6)
+    text-indent: 0
 
   .friend-requests-btn:hover,
   .notifications-btn:hover
