--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -114,7 +114,7 @@ article.social-requests ul
     overflow: hidden
     position: relative
 
-  .notifications-count
+  .badge
     display: none
     position: absolute
     top: 0px
