--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -117,17 +117,17 @@ article.social-requests ul
   .badge
     display: none
     position: absolute
+    box-sizing: border-box
     top: 0px
     right: 4px
-    // width: 10px
-    padding: 0px 6px
-    border: 2px solid white
+    height: 19px
+    line-height: 19px
+    padding: 2px 6px 0
     border-radius: 100px
-    background: -webkit-linear-gradient(top, #FF6969 0%,#ff0000 100%)
-    // background-color: #FF6969
-    box-shadow: 0 1px 2px rgba(0,0,0,.5), 0 1px 2px rgba(0,0,0,.4), 0 0 1px rgba(0,0,0,.7) inset, 0 8px 0px rgba(255,255,255,.11) inset
+    background: #ff0000
+    box-shadow: 0 1px 2px rgba(0,0,0,.5), 0 1px 2px rgba(0,0,0,.4)
     -webkit-background-clip: padding-box
-    font: bold 16px/20px "Helvetica Neue", sans-serif
+    font: normal 13px "Helvetica Neue", sans-serif
     color: white
     text-decoration: none
     text-shadow: 0 -1px 0 rgba(0,0,0,.6)
