add bafk widget link to /kids

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -332,6 +332,17 @@
     padding-left: 25px
 
 #widget-download
+  .bafk-icon
+    width: 58px
+    height: 58px
+    float: right
+
+  .bd.bafk
+    background:
+      image: image-url("ad_bafk_platforms.png")
+      position: 96% 84%
+      repeat: no-repeat
+
   .bd
     background:
       image: image-url("ad_bible_platforms.png")
