--- a/app/views/sidebars/references/_show.html.haml
+++ b/app/views/sidebars/references/_show.html.haml
@@ -9,3 +9,4 @@
 = render partial: 'widgets/featured_plans' if logged_out?
 = render partial: 'sidebars/notes/stub', locals: {reference: reference}
 = render partial: 'widgets/download_app'
+= render partial: 'widgets/bible_app_for_kids'
