--- a/app/views/widgets/_download_app.html.haml
+++ b/app/views/widgets/_download_app.html.haml
@@ -4,5 +4,5 @@
     - style = "background: url(#{image_path(localized_bible_icon(58))}) no-repeat right center" if localized_bible_icon
     %p{style: style}
       = t('download ad.description copy', language_count: 700).html_safe
-    %a.action_button_green{href:'/app'}
+    %a.action_button_green{href: app_page_path}
       = t("download ad.download")
