add svg platform icons

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -339,9 +339,10 @@
 
   .bd.bafk
     background:
-      image: image-url("ad_bafk_platforms.png")
+      image: image-url("ad_bafk_platforms.svg")
       position: 96% 84%
       repeat: no-repeat
+      size: 90px 25px
 
   .bd
     background:
