--- a/app/views/shared/version_selector/_items.html.haml
+++ b/app/views/shared/version_selector/_items.html.haml
@@ -8,11 +8,12 @@
 
 - ref_str = presenter.reference_string
 - book, chapter = ref_str.book, ref_str.chapter
+- locale_dir = I18n.locale.to_s.eql?("en") ? '' : '/' + I18n.locale.to_s
 - versions.each do |v|
   - version = v.abbreviation.downcase
   - version_id = v.id
   - version_meta = v.to_meta
-  - url = "/bible/#{version_id}/#{book}.#{chapter}.#{version}"
+  - url = "#{locale_dir}/bible/#{version_id}/#{book}.#{chapter}.#{version}"
 
   %tr{"data-version" => version_id, "data-abbrev" => version, "data-meta" => version_meta}
     %th
