--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -544,3 +544,9 @@ article#plan-index
     width: 100%
     border-radius: 0px
     margin-left: 0px
+
+// !-------------- Version page
+
+#main
+  .version_download
+    margin-top: 20px
