--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -1,5 +1,5 @@
 - @title = @version.to_s
-- unless false #is_whitelabel_site
+- unless is_whitelabel_site
   - content_for :additional_meta do
     - locale_dir = I18n.locale.to_s.eql?("en") ? '' : '/' + I18n.locale.to_s
     - canonicalHref = "https://www.bible.com#{locale_dir}/versions/#{@version.id}"
