--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -12,7 +12,6 @@
   alt_reference = presenter.respond_to?(:alt_reference) ? presenter.alt_reference : nil
   verses        = presenter.respond_to?(:verses)        ? presenter.verses : nil # some of our presenters may not expose the verses (yet)
   focus_verses  = presenter.focus? # for verses focus styling instead of select styling.
-  modal_verse   = presenter.respond_to?(:modal_verse)   ? presenter.modal_verse : nil
   a_chapter     = presenter.try(:is_chapter?)
 
 - content_for :meta_description do
@@ -33,7 +32,6 @@
   "data-fullscreen"   => client_settings.reader_full_screen,
   "data-selected-verses" => (focus_verses ? nil : verses.try(:join,",")),
   "data-focused-verses" => (focus_verses ? verses.try(:join,",") : nil),
-  "data-verse-modal-enabled" => "#{!modal_verse.nil?}",
   "data-book"       => reference[:book].to_s.downcase,
   "data-book-api"   => reference[:book].sub(/[A-Z]+/) {|m| m.downcase},
   "data-book-human" => truncate(version.books[reference[:book]].human, length: 40, separator: " "),
@@ -58,6 +56,12 @@
       "data-usfm"          => reference.chapter_usfm}
       
       = presenter.content.html_safe if presenter.content
+    
+    -# Read Chapter button
+    - if presenter.verses
+      %p#read_chapter
+        %a.action_button_blue{href: reference_path(reference: reference.chapter_usfm.downcase)}
+          = t("read reference", reference: reference.to_chapter.human)
 
     // Secondary version content
     #version_secondary{class: alt_version.try(:text_direction),
