Read Chapter tweaks

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -456,6 +456,9 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
 .callout_green
   background: #ddfad5
 
+#read_chapter
+  margin-top: .5em
+
 // `Type
 //---------------------------------------------------------------------------------------
 
