simplify bible path for nav

--- a/app/views/layouts/_mobile_nav.html.haml
+++ b/app/views/layouts/_mobile_nav.html.haml
@@ -15,7 +15,7 @@
         %a.icon{href: moments_path}
           %span= t('home')
       %li#nav_mobile_bible
-        %a.icon{href: bible_path}
+        %a.icon{href: bible_localized_path}
           %span= t('bible')
       %li#nav_mobile_plans
         %a.icon{href: plan_href}
