--- a/app/views/layouts/_primary_nav.html.haml
+++ b/app/views/layouts/_primary_nav.html.haml
@@ -25,7 +25,7 @@
           %a.icon{href: moments_path, "data-title" => "Home"}
 
       %li#nav_primary_bible{class: highlight.call(is_bible_url) }
-        %a.icon{href: bible_path, "data-title" => t("bible")}
+        %a.icon{href: bible_localized_path, "data-title" => t("bible")}
 
       %li#nav_primary_plans{class: highlight.call(is_plans_url)}
         %a.icon{href: plan_href, "data-title" => t("plans.title")  }
